src/app/globals.css
@import url('https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Poppins:wght@300;400;500;600;700&display=swap');

@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap');

@tailwind base;
@tailwind components;
@tailwind utilities;


*{
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}



:root {
  --font-urban: "Urban Storm", sans-serif;
  --font-grotesk: "BDO Grotesk", sans-serif;
}
.hero_bg {
  background-image: url('/hero-image-1.svg'), url('/hero-image-2.svg');
  background-repeat: no-repeat;
  background-position: left 130px top 30px, right 130px top 30px;
  background-size: 384px
  
  
}



.max-container {
  @apply mx-auto max-w-[1440px];
}

.padding-container {
  @apply px-6 lg:px-20;
}

.icon{
  font-size: 40px;
}

@media only screen and (max-width: 767px) {
  .icon {
    font-size: 20px;
  }
}

.custom-bullets li::marker {
  color: #4B0082; /* Change to your desired bullet color */
}
.default-transition {
  transition-duration: 0.5s;
  transition-property: all;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
}

.bg-cr8tBlack {
  --tw-bg-opacity: 1;
  background-color: #202526 
}

.bg-cr8tOrnge {
  --tw-bg-opacity: 1;
  background-color: #FF5A12 var(--tw-bg-opacity); 
}

.text-cr8tWhite {
  --tw-text-opacity: 1;
  color: rgba(255, 255, 255, var(--tw-text-opacity));
}

.text-trustBlack {
  --tw-text-opacity: 1;
  color: rgba(0, 0, 0, var(--tw-text-opacity));
}
.transition-width {
  transition-property: width;
}
@keyframes heartbeat {
  0%, 30% {
    width: 26px; /* Initial state */
  }
  40% {
    width: 14px; /* Shrink */
  }


  70%, 100% {
    width: 26px; /* Hold original size for a pause */
  }
}

.heartbeat {
  animation: heartbeat 2.5s ease-in-out infinite; /* Updated animation duration with pause */
}

.lock-icon {
  position: absolute; /* Prevents it from affecting other elements */
  left: 0;
  top: 0;
  transform-origin: center; /* Ensure it scales relative to the center */
}

